# rhoai-amplitude-dashboard

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
config/: amplitude_account_mapping.yaml  amplitude_blocklist.yaml
docs/: amplitude-data-dictionary.md  amplitude-data-strategy.md
src/analyzers/: amplitude_classifier.py
src/commands/: amplitude_cmd.py
src/extractors/: amplitude_client.py  amplitude_mapper.py  amplitude_matcher.py
src/models/: amplitude.py
tests/: test_amplitude_classifier.py  test_amplitude_client.py  test_amplitude_crossref.py  test_amplitude_mapper.py
