[project]
name = "rhoai-amplitude-dashboard"
version = "1.0.0"
description = "RHOAI Customer Profiles Dashboard — Amplitude product analytics report generator"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
    "ruff>=0.4",
]

[project.scripts]
rhoai-dashboard = "main:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100
